--- a/server/src/views/email.html
+++ b/server/src/views/email.html
@@ -77,7 +77,7 @@
                         </tr>
                         <tr>
                           <td style="font-size: 12px; color: #5b5b5b; font-family: 'Open Sans', sans-serif; line-height: 18px; vertical-align: top; text-align: left;">
-                            Hello, Philip Brooks.
+                            Hello, {{customer_email}}
                             <br> Thank you for shopping from our store and for your order.
                           </td>
                         </tr>
